--- a/css/phone.css
+++ b/css/phone.css
@@ -1,7 +1,9 @@
 .navbar{
     flex-direction: column;
-    font-size: 0.5em;
 }
 .headlines::before{
     height: 60em;
+}
+.navbar ul li {
+    font-size: 1rem;
 }
