--- a/css/phone.css
+++ b/css/phone.css
@@ -1,5 +1,15 @@
-.navbar{
-    flex-direction: column;
+.headlines h1{
+    /* height: 20em; */
+    font-size: 1.5rem;
+}
+.headlines h2{
+    font-size: 1rem;
+}
+.headlines p{
+    font-size: 0.5rem;
+}
+.logo img{
+    display: none;
 }
 .headlines::before{
     height: 60em;
